# blas-baseliner-benchmark

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  lines-of-code-output.txt  lines-of-code.py  protocol.schema.json
analysis/: dataLoader.py  notebook.ipynb  requirements.txt
config/: auto_bz_variation_criterion.json  cuda-config.json  default.protocol.json  hip-config.json  single_shot.protocol.json
gpu-blas/: BlasShapes.hpp  Buffers.hpp  CMakeLists.txt  GpuBlas.hpp  IBatchedBlasWorkload.hpp  IBlasWorkload.hpp  IMemoryBackend.hpp  IStridedBatchedBlasWorkload.hpp  Random.hpp  Stats.hpp  Types.hpp  Validation.hpp  Version.hpp  main.cpp
gpu-blas/cuda/: CMakeLists.txt  CublasHelper.cu  CublasHelper.hpp  CudaBlas.cu  CudaBlas.hpp  CudaBlasWorkload.hpp  CudaMemoryBackend.hpp  Types.hpp  types.hpp
gpu-blas/cuda/Gemm/: CMakeLists.txt  CudaBlasGemm.hpp  CudaBlasGemmEx.hpp  Gemm.cu  GemmEx.cu
gpu-blas/cuda/Gemm/3m/: CMakeLists.txt  CudaBlasGemm3m.hpp  Gemm3m.cu
gpu-blas/cuda/Gemm/Batched/: BatchedCublasGemm.cu  BatchedCublasGemm.hpp  CMakeLists.txt
gpu-blas/cuda/Gemm/Ex/: CMakeLists.txt  CudaBlasGemmEx.hpp  GemmEx.cu
gpu-blas/cuda/Gemm/Regular/: CMakeLists.txt  RegularCuBlasGemm.hpp  RegularGemm.cu
gpu-blas/cuda/Gemm/Strided/: CMakeLists.txt  StridedBatchedCublasGemm.cu  StridedBatchedCublasGemm.hpp
gpu-blas/hip/: CMakeLists.txt  HipMemoryBackend.hpp  RocBlas.hip  RocBlas.hpp  RocBlasHelper.hip  RocBlasHelper.hpp  RocBlasWorkload.hpp  Types.hpp  types.hpp
gpu-blas/hip/Gemm/: CMakeLists.txt  RocBlasGemm.hpp
gpu-blas/hip/Gemm/Batched/: BatchedRocBlasGemm.hip  BatchedRocBlasGemm.hpp  CMakeLists.txt
gpu-blas/hip/Gemm/Ex/: CMakeLists.txt  GemmEx.hip  RocBlasGemmEx.hpp
gpu-blas/hip/Gemm/Regular/: CMakeLists.txt  RegularGemm.hip  RegularRocBlasGemm.hpp
gpu-blas/hip/Gemm/Strided/: CMakeLists.txt  StridedBatchedRocBlasGemm.hip  StridedBatchedRocBlasGemm.hpp
results/2026-03-04/: rq-cgemm69a865bb11fbb2.json  rq-cgemm69a8662811143a.json  rq-dgemm69a8659c0b313e.json  rq-dgemm69a865de0bdda7.json  rq-sgemm69a8658f05f078.json  rq-sgemm69a865b2058b51.json  rq-zgemm69a865e3171e13.json  rq-zgemm69a8669f173570.json
